--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 
   <!-- 7 Preloaded Images -->
   <div class="image-grid" id="imageGrid">
-    <img src="img1.jpg" alt="img1">
-    <img src="img2.jpg" alt="img2">
+    <img src="https://files.slack.com/files-pri/T020GUFVC2H-F094PA30P9T/q-a-on-my-work-as-a-marine-biologist-with-harbour-seals-sea-v0-1oqgtohfetkb1.webp" alt="img1">
+    <img src="https://files.slack.com/files-pri/T020GUFVC2H-F094PA30P9T/q-a-on-my-work-as-a-marine-biologist-with-harbour-seals-sea-v0-1oqgtohfetkb1.webp" alt="img2">
     <img src="img3.jpg" alt="img3">
     <img src="img4.jpg" alt="img4">
     <img src="img5.jpg" alt="img5">
