--- a/index.html
+++ b/index.html
@@ -1,30 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Camera App</title>
-  <style>
-    video, canvas {
-      border: 1px solid black;
-      width: 100%;
-      max-width: 400px;
-      display: none; /* Hidden by default */
-    }
-  </style>
-</head>
-<body>
-  <h1>Camera App</h1>
+const video = document.getElementById('video');
+const canvas = document.getElementById('canvas');
+const snapButton = document.getElementById('snap');
+const context = canvas.getContext('2d');
 
-  <!-- Button to show camera -->
-  <button id="start-camera">Show Camera</button>
+// Ask for access to the camera
+navigator.mediaDevices.getUserMedia({ video: true })
+  .then((stream) => {
+    video.srcObject = stream;
+  })
+  .catch((err) => {
+    console.error('Error accessing the camera:', err);
+  });
 
-  <!-- Video and snap button will appear after camera is enabled -->
-  <video id="video" autoplay></video><br>
-  <button id="snap" style="display: none;">Take Picture</button>
+// Capture frame on button click
+snapButton.addEventListener('click', () => {
+  canvas.width = video.videoWidth;
+  canvas.height = video.videoHeight;
+  context.drawImage(video, 0, 0, canvas.width, canvas.height);
+});
 
-  <canvas id="canvas" style="display: none;"></canvas>
-
-  <script src="app.js"></script>
-</body>
-</html>
