--- a/index.html
+++ b/index.html
@@ -20,13 +20,11 @@
             top: 20px;
             left: 20px;
         }
-        
         #about h1 {
-            font-size: 45px;
-            font-weight: bold;
-            color: black;
-            margin: 0;
+            font-size:45px;
+            word-wrap:break-word;
         }
+       
     </style>
 </head>
 <body>
