--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div id="uploadedImagePreview"></div>
         </div>
         <div id="right">
-            <img id="sealImage" src="seal.png" alt="Seal" />
+            <img id="sealImage" src="https://files.slack.com/files-pri/T020GUFVC2H-F094PA30P9T/q-a-on-my-work-as-a-marine-biologist-with-harbour-seals-sea-v0-1oqgtohfetkb1.webp" alt="Seal" />
         </div>
     </div>
     <script src="script.js"></script>
