--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     // ====================================================================
     // !! IMPORTANT: PASTE YOUR FULL REPLIT URL HERE !!
     // ====================================================================
-    const API_URL = "https://skyscroll.hyeshrin2003.replit.dev/predict";
+    const API_URL = "https://skyscroll.skyscrollcorp.replit.dev/predict";
 
 
     // This function will be called when the button is clicked
