--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     // ====================================================================
     // !! IMPORTANT: PASTE YOUR FULL REPLIT URL HERE !!
     // ====================================================================
-    const API_URL = "https://skyscroll.skyscrollcorp.replit.dev/predict";
+    const API_URL = "https://9a8bb095-24ea-4358-86de-b1d878c5c23f-00-1e632735zzvjz.kirk.replit.dev/";
 
 
     // This function will be called when the button is clicked
