--- a/index.html
+++ b/index.html
@@ -92,5 +92,6 @@
     predictButton.addEventListener('click', submitVideo);
 
   </script>
+    <img src="images/seal.png" alt="Seal Photo" width="300">
 </body>
 </html>
