--- a/index.html
+++ b/index.html
@@ -92,6 +92,6 @@
     predictButton.addEventListener('click', submitVideo);
 
   </script>
-  <img src="seal.png" alt="Seal Photo" width="300">
+  <img src="main/seal.png" alt="Seal Photo" width="300">
 </body>
 </html>
