--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 <body>
 
   <div id="container">
+    <img src="seal.png" alt="Seal Photo" width="300">
+
     <h1>Upload a Video for Gesture Recognition</h1>
     <input type="file" id="videoInput" accept="video/*">
     <button id="predictButton">Predict</button>
@@ -25,7 +27,7 @@
     <p id="result"></p>
   </div>
 
-  <script>
+<!--  <script>
     // Get references to our HTML elements
     const videoInput = document.getElementById('videoInput');
     const predictButton = document.getElementById('predictButton');
@@ -92,6 +94,6 @@
     predictButton.addEventListener('click', submitVideo);
 
   </script>
-  <img src="seal.png" alt="Seal Photo">
+ -->
 </body>
 </html>
