--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <p id="result"></p>
   </div>
 
-<!--  <script>
+  <script>
     // Get references to our HTML elements
     const videoInput = document.getElementById('videoInput');
     const predictButton = document.getElementById('predictButton');
@@ -94,6 +94,6 @@
     predictButton.addEventListener('click', submitVideo);
 
   </script>
- -->
+ 
 </body>
 </html>
