--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <link
@@ -168,3 +168,111 @@
  
 </body>
 </html>
+-->
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>SkyScroll Gesture Recognition</title>
+    <style>
+        body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; text-align: center; margin-top: 40px; background-color: #f4f4f9; }
+        h1 { color: #333; }
+        #container { background: white; padding: 30px; border-radius: 8px; box-shadow: 0 4px 6px rgba(0,0,0,0.1); display: inline-block; }
+        button { background-color: #007bff; color: white; border: none; padding: 10px 20px; border-radius: 5px; cursor: pointer; font-size: 16px; margin-left: 10px; }
+        button:disabled { background-color: #cccccc; cursor: not-allowed; }
+        #result { margin-top: 20px; font-size: 1.2em; font-weight: bold; color: #28a745; }
+        #status { margin-top: 15px; color: #6c757d; height: 20px; }
+    </style>
+</head>
+<body>
+
+  <div id="container">
+    <h1>Upload a Video for Gesture Recognition</h1>
+    <input type="file" id="videoInput" accept="video/*">
+    <button id="predictButton">Predict</button>
+    <p id="status"></p>
+    <p id="result"></p>
+    <img id="sealimage" src="seal.png" alt="Seal Photo" width="300">
+  </div>
+
+  <script>
+    const videoInput = document.getElementById('videoInput');
+    const predictButton = document.getElementById('predictButton');
+    const resultElement = document.getElementById('result');
+    const statusElement = document.getElementById('status');
+    const img = document.getElementById("sealimage");
+
+    const API_URL = "https://9a8bb095-24ea-4358-86de-b1d878c5c23f-00-1e632735zzvjz.kirk.replit.dev/predict";
+
+    async function submitVideo() {
+      const file = videoInput.files[0];
+      if (!file) {
+        statusElement.textContent = 'Please select a video file first.';
+        return;
+      }
+
+      statusElement.textContent = 'Uploading and processing, please wait...';
+      resultElement.textContent = '';
+      predictButton.disabled = true; // Disable the button
+
+      const formData = new FormData();
+      formData.append('video', file);
+
+      try {
+        const response = await fetch(API_URL, { method: 'POST', body: formData });
+
+        if (!response.ok) {
+            throw new Error(`Server responded with an error: ${response.status}`);
+        }
+
+        const data = await response.json();
+
+        if (data.error) {
+            throw new Error(data.error);
+        }
+
+        resultElement.textContent = `Prediction: ${data.prediction}`;
+        statusElement.textContent = 'Done!';
+
+        // Animation trigger based on prediction
+        if (data.prediction == "zoom_in") {
+            img.classList.add("animate__animated", "animate__zoomIn");
+        } else if (data.prediction == "zoom_out") {
+            img.classList.add("animate__animated", "animate__zoomOut");
+        } else if (data.prediction == "swipe_down") {
+            img.classList.add("animate__animated", "animate__slideInDown");
+        } else if (data.prediction == "swipe_up") {
+            img.classList.add("animate__animated", "animate__slideInUp");
+        } else if (data.prediction == "swipe_right") {
+            img.classList.add("animate__animated", "animate__slideOutRight");
+        } else if (data.prediction == "swipe_left") {
+            img.classList.add("animate__animated", "animate__slideOutLeft");
+        }
+
+        // Remove animation classes after animation ends
+        img.addEventListener('animationend', () => {
+            img.classList.remove("animate__animated", "animate__zoomIn", "animate__zoomOut", "animate__slideInDown", "animate__slideInUp", "animate__slideOutRight", "animate__slideOutLeft");
+        }, { once: true });
+
+      } catch (error) {
+        console.error('Prediction failed:', error);
+        resultElement.textContent = '';
+        statusElement.textContent = `Error: ${error.message}. Please try again.`;
+      } finally {
+        predictButton.disabled = false; // Re-enable the button
+      }
+    }
+
+    predictButton.addEventListener('click', submitVideo);
+  </script>
+ 
+</body>
+</html>
+
